# GAME

./: .gitignore  CMakeLists.txt  README.md  compile.sh  create_directories.sh
grid_generator/: CMakeLists.txt  compile.sh  run_script.sh
grid_generator/.py/: is_land.py  land_fraction.py
grid_generator/.sh/: download_phys_sfc_quantities.sh  root_script.sh  run.sh
grid_generator/phys_quantities/: download_etopo.sh  download_glcc.sh  download_gldbv2.sh
grid_generator/src/: control.F90  control.c  control.f90  coordinator.c  coriolis.c  discrete_coordinate_trafos.c  geodesy.c  geodesy.f90  grid_generator.h  grid_nml.f90  horizontal_generation.c  index.c  index_helpers.c  index_helpers.f90  inner_product.f90  interpolate_ll.c  miscellaneous.c  mo_derived_hor_quantities.F90  mo_grid_nml.F90  mo_interpolation_ll.F90  mo_phys_sfc_properties.F90  mo_vertical_grid.F90  optimize.c  phys_sfc_properties.c  rhombus_averaging.c  standard.h  vertical_grid.c  vertical_grid.f90
grid_generator/src/derived_hor_quantities/: derived_hor_quantities.f90  miscellaneous.c  miscellaneous.f90  mo_derived_hor_quantities.F90  mo_derived_hor_quantities.f90
grid_generator/src/diff_ops/: coriolis.c  coriolis.f90  inner_product.f90  mo_coriolis.F90  mo_coriolis.f90  mo_inner_product.F90  mo_inner_product.f90  mo_rhombus_averaging.F90  mo_rhombus_averaging.f90  rhombus_averaging.c  rhombus_averaging.f90
grid_generator/src/foundations/: geodesy.f90  index_helpers.f90
grid_generator/src/horizontal_extended/: mo_derived_hor_quantities.F90
grid_generator/src/horizontal_grid/: discrete_coordinate_trafos.c  discrete_coordinate_trafos.f90  find_neighbours.c  horizontal_generation.c  horizontal_generation.f90  mo_discrete_coordinate_trafos.F90  mo_discrete_coordinate_trafos.f90  mo_horizontal_generation.F90  mo_horizontal_generation.f90
grid_generator/src/horizontal_minimal/: mo_discrete_coordinate_trafos.F90  mo_explicit_neighbourships.F90  mo_horizontal_generation.F90
grid_generator/src/namelists/: grid_nml.f90  mo_grid_nml.F90  mo_grid_nml.f90
grid_generator/src/optimization/: mo_optimize.F90  mo_optimize.f90  optimize.c  optimize.f90
grid_generator/src/post_grid_generation/: interpolate_ll.c  interpolation_ll.f90  mo_interpolation_ll.F90  mo_interpolation_ll.f90  mo_phys_sfc_properties.F90  mo_phys_sfc_properties.f90  phys_sfc_properties.c  phys_sfc_properties.f90
grid_generator/src/vertical_grid/: mo_vertical_grid.F90  mo_vertical_grid.f90  vertical_grid.c  vertical_grid.f90
handbook/: handbook.aux  handbook.out  handbook.tex  references.bib
plotting/: create_movie.sh  plot_integrals.sh  plot_maps.sh  plot_maps_batch.sh
plotting/.py/: plot_maps.py  zonal_mean.py  zonal_mean_sfc.py
plotting/.sh/: integrals_root.sh  maps_root.sh
plotting/py/: grid_plotter.py  integrals.py  maps_from_shell.py  maps_manually.py  mslp_min.py  netcdf2json.py  plot_integrals.py  plot_maps.py  plot_maps_man.py  zonal_mean.py  zonal_mean_sfc.py
run_scripts/: create_da_background.sh  held_suar.sh  held_suarez.sh  ideal.sh  op.sh  ullrich.sh  ullrich_fast.sh  ullrich_real.sh  write_icao_atmosphere.sh
run_scripts/.sh/: root_script.sh
shared/: geodesy.f90  mo_geodesy.F90  mo_geodesy.f90  mo_various_helpers.F90  mo_various_helpers.f90  various_helpers.f90
src/: constants.f90  control.F90  control.c  control.f90  coordinator.c  definitions.f90  game_types.h  mo_constants.f90  mo_definitions.F90  mo_definitions.f90
src/constituents/: constituents.h  derived_quantities.c  derived_quantities.f90  dictionary.c  dictionary.f90  mo_derived.F90  mo_derived.f90  mo_dictionary.F90  mo_dictionary.f90  mo_phase_trans.F90  mo_phase_trans.f90  phase_trans.c  phase_trans.f90
src/io/: baroclinic_wave_test.f90  grid_setup.f90  io.h  mo_grid_setup.F90  mo_grid_setup.f90  mo_set_initial_state.F90  mo_set_initial_state.f90  mo_spatial_ops_for_output.F90  mo_spatial_ops_for_output.f90  mo_write_output.F90  mo_write_output.c  mo_write_output.f90  set_grid_properties.c  set_grid_properties.f90  set_initial_state.c  set_initial_state.f90  spatial_ops_for_output.c  spatial_ops_for_output.f90  write_output.c
src/namelists/: constituents_nml.f90  diff_nml.f90  grid_nml.f90  mo_constituents_nml.F90  (+16 more)
templates/: mo_module.F90  mo_module.f90  mo_namelist_nml.F90  module.f90  namelist_nml.f90
(+92 files in other folders)
